syntax = "proto3";

package fileupload;

service FileUpload {
	rpc Upload (UploadRequest) returns (UploadResponse);
}

message UploadRequest {
	bytes content = 1;
}

message UploadResponse {
	int32 size = 1;
}